# typing-tap-you-didnt-do-typing-somewhere-else

./: .gitignore  CMakeLists.txt  README.md
include/: IInputReader.h
src/: main.cpp
src/linux/: LibinputReader.cpp  LibinputReader.h
src/macos/: HIDReader.h  HIDReader.mm
src/ui/: MainWindow.cpp  MainWindow.h
